# cyclops

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
crates/cyclops/: Cargo.toml
crates/cyclops/src/: config.rs  error.rs  lib.rs  main.rs
crates/cyclops/src/events/: clock.rs  emitter.rs  mod.rs
crates/cyclops/src/fs/: worktree.rs
crates/cyclops/src/model/: messages.rs  mod.rs  stream.rs  transport.rs
