[package]
name = "cyclops"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cyclops"
path = "src/main.rs"
