[package]
name = "cyclops"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.50", features = ["derive", "env"] }
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1.17", features = ["client-legacy", "http1", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "net", "rt", "sync", "time"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "cyclops"
path = "src/main.rs"
